# salesops-workflow-automation-hub

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  EXEC_PLAN.md  HANDOFF.md  README.md  REQ.md  RUNBOOK.md  STATE.md  TDD.md  alembic.ini  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260601_0001_create_lead_persistence_tables.py  20260610_0002_add_demo_markers.py
apps/web/: eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/docs/: route.ts
apps/web/src/components/: admin-run-history.test.tsx  admin-run-history.tsx  lead-demo.test.tsx  lead-demo.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  input.tsx  (+3 more)
apps/web/src/lib/: csv.test.ts  csv.ts  format.ts  intake-api.ts  run-history-api.ts  session.test.ts  session.ts  types.ts
backend/: __init__.py
backend/app/: config.py  db.py  health.py  main.py
backend/app/leads/: __init__.py  adapters.py  dedupe.py  demo_reset.py  demo_seed.py  identifiers.py  models.py  persistence.py  retry.py  routes.py  run_log.py  schemas.py  service.py
docs/: CASE_STUDY.md  DEMO_ASSETS.md  DEMO_SCRIPT.md  FREELANCE_PLATFORM_SNIPPETS.md  PORTFOLIO_LISTING.md
docs/assets/: README.md
docs/assets/demo/: README.md
tests/: test_config.py  test_dedupe.py  test_demo_reset.py  test_docs.py  test_health.py  test_lead_adapters.py  test_lead_intake_api.py  test_lead_persistence.py  test_lead_schemas.py  test_run_logging.py
(+6 files in other folders)
